Fix Spotify command. It now uses client ID and secret from new API.